Basic network create (without any authorization checks).
